<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="uk.co.mandilee.scorekeeper.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/root_padding"
            android:text="@string/title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@android:dimen/app_icon_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/root_padding"
            android:layout_marginRight="@dimen/root_padding"
            android:layout_weight="0"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_to_white"
                    android:gravity="center|center_vertical"
                    android:shadowColor="@android:color/white"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/aka"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/team_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aka_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:text="@string/base_score"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/score" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_spacing"
                    android:layout_marginTop="@dimen/root_padding">

                    <TextView
                        android:id="@+id/aka_wins"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="@dimen/wins_padding"
                        android:text="@string/base_wins"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:padding="@dimen/wins_padding"
                        android:text="@string/wins"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ippon"
                    android:drawableStart="@drawable/ippon"
                    android:onClick="akaIppon"
                    android:text="@string/ippon" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_spacing"
                    android:drawableLeft="@drawable/aka_waza_ari"
                    android:drawableStart="@drawable/aka_waza_ari"
                    android:onClick="akaWazaAri"
                    android:text="@string/waza_ari" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/keikoku"
                    android:drawableStart="@drawable/keikoku"
                    android:onClick="akaKeikoku"
                    android:text="@string/keikoku" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_spacing"
                    android:drawableLeft="@drawable/hansoku_chui"
                    android:drawableStart="@drawable/hansoku_chui"
                    android:onClick="akaHansokuShui"
                    android:text="@string/hansoku_chui" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/no_kachi"
                    android:drawableStart="@drawable/no_kachi"
                    android:onClick="akaNoKachi"
                    android:text="@string/no_kachi" />
            </LinearLayout>

            <TextView
                android:layout_width="@dimen/split_line"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/root_padding"
                android:layout_marginRight="@dimen/root_padding"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_to_white"
                    android:gravity="center|center_vertical"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/shiro"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/team_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shiro_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:text="@string/base_score"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/score" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_spacing"
                    android:layout_marginTop="@dimen/root_padding">

                    <TextView
                        android:id="@+id/shiro_wins"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="@dimen/wins_padding"
                        android:text="@string/base_wins"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:padding="@dimen/wins_padding"
                        android:text="@string/wins"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ippon"
                    android:drawableRight="@drawable/ippon"
                    android:onClick="shiroIppon"
                    android:text="@string/ippon" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_spacing"
                    android:drawableEnd="@drawable/shiro_waza_ari"
                    android:drawableRight="@drawable/shiro_waza_ari"
                    android:onClick="shiroWazaAri"
                    android:text="@string/waza_ari" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/keikoku"
                    android:drawableRight="@drawable/keikoku"
                    android:onClick="shiroKeikoku"
                    android:text="@string/keikoku" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_spacing"
                    android:drawableEnd="@drawable/hansoku_chui"
                    android:drawableRight="@drawable/hansoku_chui"
                    android:onClick="shiroHansokuShui"
                    android:text="@string/hansoku_chui" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/no_kachi"
                    android:drawableRight="@drawable/no_kachi"
                    android:onClick="shiroNoKachi"
                    android:text="@string/no_kachi" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:contentDescription="@string/aka"
                android:padding="@dimen/button_spacing"
                android:src="@drawable/karate_left" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="reset"
                android:text="@string/reset" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/shiro"
                android:padding="@dimen/button_spacing"
                android:src="@drawable/karate_right" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
